# ucichess-cpp

./: .gitignore  CMakeLists.txt  README.md  ucichess.pc.in
error/: ec.hpp  error.cpp  error.hpp
process/: file.cpp  file.hpp  process.cpp  process.hpp  resource.cpp  resource.hpp
src/: CMakeLists.txt
src/ucichess/error/: ec.hpp  error.cpp  error.hpp
src/ucichess/pgn/: async_simple.cpp  async_simple.hpp  coroutine.cpp  coroutine.hpp  parse.cpp  parse.hpp  sqlite.cpp  sqlite.hpp
src/ucichess/pgnread/: pgnparse.cpp  pgnparse.hpp  sqlite.hpp
src/ucichess/process/: file.hpp  process.hpp  resource.cpp  resource.hpp
src/ucichess/uci/: command.cpp  command.hpp  engine.cpp  engine.hpp  evaluation.hpp  info.cpp  info.hpp  options.cpp  process.cpp  process.hpp
src/ucichess/ux/: file.cpp  file.hpp  process.cpp  process.hpp  resource.cpp  resource.hpp  socket.cpp  socket.hpp  ux.hpp
test/: CMakeLists.txt  file.cpp  process.cpp  uci_test.cpp
test/pgn/: async_test.cpp  parse_test.cpp  pgn2sqlite_test.cpp  pgn_test.cpp  sqlite_test.cpp
test/pgn/migrate/: 0001.sql
test/ucichess/: command.cpp  command.hpp  engine_spin_test.cpp  stdexec_hello.cpp  stdexec_test.cpp  test_uci.cpp  uci_test.cpp  unifex_test.cpp
test/ux/: handling_mono_client.cpp  handling_multiple_clients.cpp  socket1.cpp
uci/: command.cpp  command.hpp  process.cpp  process.hpp
